# cinema_bot

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
.github/workflows/: lint.yaml
configs/: config.example.toml
migrations/: env.py
migrations/versions/: 2024_01_15_0250-4a80c6591dca_.py  2024_01_22_0020-b92f36f2c567_create_users_table.py
src/tgbot/: config.py  main.py
src/tgbot/api/: base.py  client.py
src/tgbot/core/models/: kinopoisk.py  user.py
src/tgbot/core/presenters/: content.py
src/tgbot/db/models/: __init__.py  base.py  user.py
src/tgbot/db/repos/: base.py  user.py
src/tgbot/handlers/: user.py
src/tgbot/middleware/: db.py  http_session.py
src/tgbot/models/: kinopoisk.py  user_dto.py
src/tgbot/repository/: db.py
src/tgbot/services/: user_service.py
